tests/sksl/errors/golden/UndefinedSymbol.glsl
### Compilation failed:

error: 1: unknown identifier 'x'
1 error
